--- a/css/style.css
+++ b/css/style.css
@@ -122,4 +122,6 @@ background:
    .grayscale.grayscale-replaced.grayscale-fade:hover > svg {
      opacity: 0;}
 
-    
+     img {
+   max-width: 100%
+ }
